--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=your_mongodb_connection_string
-JWT_SECRET=your_secret_key
+MONGO_URI=mongodb+srv://Kenchin:skakunSS1978@cluster0.tmh6egd.mongodb.net/funkoDB?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=superfunko_secret_key_2025
